@@ -1,7 +1,11 @@
-$Id: History,v 1.37 2000-11-24 09:50:07 gcosmo Exp $
+$Id: History,v 1.38 2000-11-28 12:07:54 gcosmo Exp $
 
 G3toG4 Modification History (reverse chronological order, please !)
 --------------------------------------------------------------------
+
+g3tog4-V02-00-05 28-Nov-2000 G.Cosmo
+- Fixed bug in G3toG4BuildTree::ClearG3PosCopy(G4int). Entry in vector was
+  not properly destroyed.
 
 g3tog4-V02-00-04 24-Nov-2000 G.Cosmo
 - Added protection against multiple positiong of the same physical volume
